atualização de css

--- a/index.html
+++ b/index.html
@@ -12,28 +12,33 @@
 
 <body>
 
+    <!--Título-->
     <header>
         <center><h1>Portfólio</h1></center>
-        <center><h2><em>Projetos que criei ou que participei</em></h2></center>
+        <center><h2 class="subtitle"><em>Projetos que criei ou que participei</em></h2></center>
     </header>
 
     <!--Novas Ideias-->
     <article>
+        <center>
         <h3><a href="https://www.instagram.com/novasideiasce/" target="_blank">Novas Ideias</a> (Criador)</h3>
-        <p>Descrição: Página no instagram com o intuíto de divulgar ideias recém tiradas do papel.</p>
+        <p>Descrição: Página no instagram com o intuíto de divulgar os mais diversos tipos de ideias que foram recém tiradas do papel.</p>
         <img src="images/novasideias.png">
+        </center>
     </article>
     
     <!--Enigmetas-->
     <article>
+        <center>
         <h3><a href="https://luizing.github.io/enigmetas/" target="_blank">Enigmetas</a> (Criador)</h3>
         <p>Descrição: Site puzzle em que o objetivo é passar todas as fases utilizando conhecimentos nem um pouco óbivios.</p>
         <img src="images/enigmetas.png">
+        </center>
     </article>
 
     <!--Contatos-->
     <footer>
-        <h3>Contatos:</h3>
+        <h3 class="contats">Contatos:</h3>
         <p class="contato-linkedin"><a href="https://www.linkedin.com/in/luiz-eduardo-alves-camur%C3%A7a-7206521b9/" target="_blank" title="Linkedin"><img class="icon" src="images/linkedin icon.ico" ></a></p>
         <p class="contato-github"><a href="https://github.com/luizing" target="_blank" title="GitHub"><img class="icon" src="images/github.png"></a></p>
         <p class="contato-email"><a href="mailto:luizeduardo2003html@gmail.com" target="_blank" title="Email"><img class="icon" src="images/email.png"></a></p>
