erro de ortografia

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <article>
         <center>
         <h3><a href="https://www.instagram.com/novasideiasce/" target="_blank">Novas Ideias</a> (Criador)</h3>
-        <p>Descrição: Página no instagram com o intuíto de divulgar os mais diversos tipos de ideias que foram recém tiradas do papel.</p>
+        <p>Descrição: Página no instagram com o intuito de divulgar os mais diversos tipos de ideias que foram recém tiradas do papel.</p>
         <img src="images/novasideias.png">
         </center>
     </article>
